# PythonProject

./: README.md  pyproject.toml  setup.cfg
src/transcribegui/: __init__.py  main.py  tkpdfviewer.py  transcribegui.py
