[metadata]
name = transcribegui
version = 0.0.1
author = Stefanie Backasch
description = Eine Tk-GUI zur Unterstützung von Transkriptionsaufgaben
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Natural Language :: German

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

install_requires =
    PyMuPDF  # tkpdfviewer

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    # enumerated names
    TranscribeGUI = transcribegui.main:gui_main
